# yolo-ncnn-android

./: build.gradle  gradle.properties  local.properties
.github/workflows/: build-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/yoloNcnn/: AiUtil.java  Billiards.java  CanvasWindow.java  CardCounter.java  ChatRequest.java  CheckboxAdapter.java  CommandExecution.java  Detection.java  Draw.java  FileUtils.java  FloatingWindowService.java  HttpUtil.java  ImageDescriptionRequest.java  ImageSocketClient.java  ImageUtil.java  ImageWebSocketClient.java  KnowledgeBo.java  MainActivity.java  MediaProjectionHelper.java  MenuWindowService.java  ModelListAdapter.java  Param.java  Recognition.java  Response.java  SingleTouchSimulator.java  (+5 more)
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp  yolov8.cpp  yolov8.h  yolov8_det.cpp  yolov8_pose.cpp  yolov8_seg.cpp
app/src/main/res/color/: selector_text.xml
app/src/main/res/drawable/: check_boxs.xml  check_boxs2.xml  checkbox_style.xml  seekbar_bg.xml  shape_seekbar_circle.xml  shape_sku.xml  shape_sku_normal.xml  sku_rg.xml  spinner_background.xml  tab_background.xml
app/src/main/res/drawable-v24/: gradient_chile_bg.xml
app/src/main/res/layout/: draw.xml  dropdown_stytle.xml  floating_icon.xml  item_checkbox.xml  item_model_view.xml  main.xml  menu.xml  spinner_item.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml
github/workflows/: build-apk.yml
gradle/wrapper/: gradle-wrapper.properties
